backups/authenticfarma-candidatos-working-config/old-kubernetes-folder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentic-candidatos-ingress
  namespace: authenticfarma
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "authentic-candidatos-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: candidatos.authenticfarma.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentic-candidatos-service
                port:
                  number: 80
